Changelog Notes:
Adjusted Hardy regeneration rate.
Added Sandbox Options for:
-Hardy Regeneration Rate
-Pack Mule Weight Change
-Pack Mouse Weight Change
-Default Weight Change
-Global Weight Modifier.
-Gymgoer
-Superimmune
-Grave Robber
-Indefatigable
-Gordanite
-Evasive
Gordanite now scales off Long Blunt and is now less OP at lower levels.
Fixed Localization Bug in Gordanite.
Evasive now properly removes Zombification on attacks that were dodged.
Evasive now checks for Lacerations.
Fixed multiplication issue in Specialization that was removing the wrong XP amount.