@@ -12,8 +12,11 @@ Added Sandbox Options for:
 -Indefatigable
 -Gordanite
 -Evasive
+-Alcoholic
 Gordanite now scales off Long Blunt and is now less OP at lower levels.
 Fixed Localization Bug in Gordanite.
 Evasive now properly removes Zombification on attacks that were dodged.
 Evasive now checks for Lacerations.
 Fixed multiplication issue in Specialization that was removing the wrong XP amount.
+Alcoholic now notifies the player when they have satisfied their need.
+Fix Script error in Recipe for Cure.
